force-app/main/default/objects/Event_Attendee_Record__c/Event_Attendee_Record__c.object-meta.xml
<CustomObject>
    <description>Event Attendee Record(Relationship)</description>
    <label>Event Attendee Record</label>
    <nameField>
        <displayFormat>EAR-{00000}</displayFormat>
        <label>Event Attendee Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Attendee Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>