force-app/main/default/objects/Event_Attendee_Record__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Event Attendee Records</relationshipLabel>
    <relationshipName>Event_Attendee_Records</relationshipName>
    <type>Lookup</type>
</CustomField>