force-app/main/default/objects/Event_Attendee_Record__c/fields/Visit_Detail__c.field-meta.xml
<CustomField>
    <fullName>Visit_Detail__c</fullName>
    <description>Relate Visit Detail to transverse all Visit details on EAR for Reporting</description>
    <label>Visit Detail</label>
    <referenceTo>Visit_Detail__c</referenceTo>
    <relationshipLabel>Event Attendee Records</relationshipLabel>
    <relationshipName>Event_Attendee_Records</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>