force-app/main/default/objects/Event_Attendee_Record__c/fields/VisitDetailContact__c.field-meta.xml
<CustomField>
    <fullName>VisitDetailContact__c</fullName>
    <description>This field is a combination of Visit Detail and Contact id, to prevent duplicate records from being inserted into this object</description>
    <label>VisitDetailContact</label>
    <length>50</length>
    <type>Text</type>
</CustomField>